	creation-time prompts.
	(auth-source-search): Document it.
	(auth-source-format-prompt): Add utility function.
	(auth-source-netrc-create): Don't default the user name to
	user-login-name.  Use `auth-source-creation-prompts' and some default
	prompts for user, host, port, and password (the default generic prompt
	remains ugly).

2011-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-netrc-create): Use `read-char' with no
	argument that XEmacs doesn't support.

	* dgnushack.el (dgnushack-compile): Exclude color.el from being
	compiled for Emacsen having no `libxml-parse-html-region' support.

	* gnus-xmas.el (gnus-xmas-define): Remove gnus-x-color-values.

	* lpath.el: Bind buffer-save-without-query for XEmacs.

2011-02-23  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (article-make-date-line): Ignore errors if time is
	invalid and not convertible.
	(article-make-date-line): Only add lapsed time if time is not nil.

2011-02-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-create): Use `read-char' instead of
	`read-char-choice' for backwards compatibility.
	(auth-source-netrc-element-or-first): New function to DTRT for
	parameter extraction.
	(auth-source-netrc-create): Use it and fix multiple parameter print
	bug.  Use the default passed from above (given-default) or the
	built-in (user-login-name for :user).

2011-02-23  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-dribble-read-file): Set
	buffer-save-without-query, since we always want to save the dribble
	file, probably.

	* nnmail.el (nnmail-article-group): Allow a final "" split to work on
	nnimap.

	* gnus-sum.el (gnus-user-date-format-alist): Renamed back again from
	-summary- since it's a user-visible variable.

	* nnimap.el (nnimap-retrieve-group-data-early): Don't do QRESYNC the
	first time you use the new Gnus.

2011-02-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Don't load netrc.el.